maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:5: error: ';' expected but ',' found.
    case 0 => while(getDirection()!= Direction.NORTH){gauche()};while(!estFaceMur){avance()},etat=1
                                                                                            ^IslandMaze:47: error: Missing closing brace `}' assumed here
}
^